--- a/src/app/page.css
+++ b/src/app/page.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  padding: 10rem 0;
 }
 
 .search__container {
@@ -10,7 +11,6 @@
   align-items: center;
   gap: 0.725rem;
   width: calc(100% / 3);
-  margin-top: 10rem;
   margin-bottom: 3.725rem;
 }
 
@@ -22,10 +22,18 @@
   background-color: transparent;
   padding: 0.5rem 0.725rem;
 }
+.search-field::placeholder {
+  color: var(--gray);
+  font-family: var(--font);
+  font-size: 0.875rem;
+}
 
 .add-task {
   width: 40px;
   height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--primary);
   border: none;
   border-radius: 0.5rem;
@@ -49,4 +57,62 @@
   gap: 1rem;
   width: calc(100% / 3);
   margin-bottom: 3.725rem;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  gap: 1rem;
+}
+
+.modal-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 0.725rem;
+}
+
+.modal-field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.input-field__modal {
+  height: 40px;
+  width: 100%;
+  border: solid 2px var(--primary);
+  border-radius: 0.5rem;
+  background-color: transparent;
+  padding: 0.5rem 0.725rem;
+  font-size: 0.875rem;
+}
+
+.input-field__modal::placeholder {
+  color: var(--gray);
+  font-family: var(--font);
+  font-size: 0.875rem;
+}
+
+.modal-add__container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.725rem;
+}
+
+.modal-add_task {
+  width: fit-content;
+  align-content: right;
+  padding: 8px;
+  border: none;
+  background-color: var(--primary);
+  color: var(--white);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: 100ms ease-in;
+}
+
+.modal-add_task:hover {
+  background-color: var(--primary-light);
 }
